@@ -34,7 +34,12 @@ public class EndpointConfig {
         ENDPOINT_PARAMETERS.put("api/prs/kyc/documents", Arrays.asList("frontId", "backId", "selfieId", "taxId", "accountId"));
         ENDPOINT_PARAMETERS.put("api/prs/kyc/record", List.of("accountId"));
         ENDPOINT_PARAMETERS.put("api/prs/kyc/findById/{DocumentUniqueId}", List.of("DocumentUniqueId"));
-        ENDPOINT_PARAMETERS.put("api/prs/kyc/status/update", Arrays.asList("idNumber", "expiryDate", "accountId", "status", "rejectionReason"));
+        ENDPOINT_PARAMETERS.put("api/prs/kyc/status/update", Arrays.asList("idNumber", "expiryDate", "accountId", "status"));
+
+        // KYC Recovery
+        ENDPOINT_PARAMETERS.put("api/prs/kyc/recovery/verify", Arrays.asList("accountId", "idNumber", "expiryDate"));
+        ENDPOINT_PARAMETERS.put("api/prs/kyc/recovery/token", Arrays.asList("oldAccountId", "newAccountId"));
+        ENDPOINT_PARAMETERS.put("api/prs/kyc/recovery/validate", List.of("newAccountId"));
 
         return com.adorsys.webank.security.extractor.EndpointParameterMapper.builder().endpointParameters(ENDPOINT_PARAMETERS).build();
     }
